Keep carrier bay projection order deterministic